--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
     <section>
         <h3 class="player" id="numCard">Tamaño del Cartón</h3>
         <input type="text" class="textField" id="numMatrix">
-        <button type="button" class="startButton" id="searchButton">¡Iniciar!</button>
-        <script src="./logIn.js"></script>
+        <button type="button" class="startButton" id="startButton">¡Iniciar!</button>
+        <script src="./logIn.js" type="module"></script>
     </section>
 </body>
 </html>
