--- a/bingo.html
+++ b/bingo.html
@@ -29,6 +29,6 @@
                 <path d="M75.1056 49.75L0.0263977 98.8969V0.603058L75.1056 49.75Z" fill="#9A9FFF"/>
               </svg>
         </section>
-        <script src="main.js" type="module"></script>
+        <script src="./main.js" type="module"></script>
     </body>
 </html>
