--- a/index.html
+++ b/index.html
@@ -25,7 +25,8 @@
         <h3 class="player" id="numCard">Tamaño del Cartón</h3>
         <input type="text" class="textField" id="numMatrix">
         <button type="button" class="startButton" id="startButton">¡Iniciar!</button>
-        <script src="./logIn.js" type="module"></script>
+        <!-- <script src="./logIn.js" type="module"></script> -->
+        <script src="./prueba.js"></script>
     </section>
 </body>
 </html>
