:fire: Falta responsive y records

--- a/bingo.html
+++ b/bingo.html
@@ -29,7 +29,14 @@
                 <path d="M75.1056 49.75L0.0263977 98.8969V0.603058L75.1056 49.75Z" fill="#9A9FFF"/>
               </svg>
         </section>
-        <!-- <script src="./main.js" type="module"></script> -->
+        <section style="display: none;" id="results">
+            <h3 id="resultsTitle">Puntuaciones</h3>
+            <p id="resultados"> </p>
+            <p> </p>
+            <p> </p>
+            <p> </p>
+        </section>
+        <button id="reset" style="display: none;">Reiniciar Juego</button>
         <script src="./prueba.js"></script>
     </body>
 </html>
