--- a/bingo.html
+++ b/bingo.html
@@ -35,8 +35,9 @@
             <p> </p>
             <p> </p>
             <p> </p>
+            <p id="winner"> </p>
         </section>
-        <button id="reset" style="display: none;">Reiniciar Juego</button>
-        <script src="./prueba.js"></script>
+        <button id="reset">Reiniciar Juego</button>
+        <script src="./main.js"></script>
     </body>
 </html>
