--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <h1 id="mainTitle">¡Bingo!</h1>
-    <section>
+    <section id="seccion">
         <h3 class="player">Jugador 1</h3>
         <input type="text" class="textField" id="player1">
 
@@ -27,13 +27,13 @@
         <button type="button" class="startButton" id="startButton">¡Iniciar!</button>
     </section>
     <section id="records">
-        <h2 id="recordsTitle">Records</h2>
-        <p> </p>
+        <h2 id="recordsTitle">Últimos Jugadores</h2>
+        <p id="register"> </p>
         <p> </p>
         <p> </p>
         <p> </p>
         <p> </p>
     </section>
-    <script src="./prueba.js"></script>
+    <script src="./main.js"></script>
 </body>
 </html>
